--- a/.github/workflows/run-validations.yml
+++ b/.github/workflows/run-validations.yml
@@ -14,7 +14,7 @@ jobs:
   pubnub-yml:
     name: "Validate .pubnub.yml"
     runs-on:
-      group: Default
+      group: organization/Default
     steps:
       - name: Checkout project
         uses: actions/checkout@v4
