--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -1,6 +1,23 @@
 --- 
-version: v7.2.1
+version: v8.0.0
 changelog:
+  - date: 2024-12-04
+    version: v8.0.0
+    changes:
+      - type: feature
+        text: "BREAKING CHANGES: Default Reconnection policy is set to Exponential."
+      - type: feature
+        text: "Adding Channel, ChannelGroup, ChannelMetadata and UserMetadata entities to be first-class citizens to access APIs related to them. Currently, access is provided only for subscription APIs."
+      - type: feature
+        text: "Default value for EnableEventEngine is set to true, Subscribe operation will be executed by event engine by default."
+      - type: feature
+        text: "Added support for CustomMessageType in publish, signal, files features."
+      - type: feature
+        text: "Added support for Type field in membership APIs.."
+      - type: bug
+        text: "Re-implement WebGL support by implementing a WebGL-targeted Transport Layer utilising UnityWebRequest."
+      - type: improvement
+        text: "Removed telemetry manager."
   - date: 2024-05-09
     version: v7.2.1
     changes:
@@ -726,7 +743,7 @@ sdks:
             distribution-type: package
             distribution-repository: git release
             package-name: PubNub.unitypackage
-            location: https://github.com/pubnub/unity/releases/download/v7.2.1/PubNub.unitypackage
+            location: https://github.com/pubnub/unity/releases/download/v8.0.0/PubNub.unitypackage
             requires:
               -
                 name: "UnityEditor"
@@ -893,7 +910,7 @@ sdks:
             distribution-type: package
             distribution-repository: git release
             package-name: PubNub.unitypackage
-            location: https://github.com/pubnub/unity/releases/download/v7.2.1/PubNub.unitypackage
+            location: https://github.com/pubnub/unity/releases/download/v8.0.0/PubNub.unitypackage
             requires:
               -
                 name: "UnityEditor"
