Update CBOR DLLs, add XML inline documentation

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 */SwitchIL2CPPCache
 */SwitchIL2CPPStats
 /PubNubUnity/Library/
+/PubNubUnityUserSettings/
 /PubNubUnity/Assets/Plugins*
 /PubNubUnity/Assets/ThirdParty*
 
